# visuscript

./: .gitignore  Cargo.toml  README.md  animate  animate3  bubble_sort.py  data_structures.py  im.py  insertion_sort.py  insertion_sort_swap.py  main.py  pyproject.toml  requirements.txt  setup.py  slideshow  svg-to-png  test.py
docs/source/: conf.py  index.rst  modules.rst  visuscript.rst
examples/: array_reversal.py  bar_sort.py  binary_search_tree.py  binary_tree.py  binary_tree_old.py  breadth_first_search.py  bubble_sort.py  code_demo.py  connector.py  data_structures.py  demo_slideshow.py  ecs.py  grid_text.py  hello_world.py  insertion_sort.py  lazy_animation.py  light_theme.py  positioning.py  rectangle.py  rectangle_no_context_manager.py  rectangle_scene.py  reverse_polish.py  shunting_yard_high_level.py  stack.py  structures.py  testbuffer.py  updater_demo.py  visuscript_presentation.py  vs.py
examples/deocclusion-presentation/: deocclusion.py
examples/presentation-with-animation/: presentation-with-animation.py
scripts/: visuscript-animate
src/: action.rs  array.rs  array_struct.rs  drawable.rs  lib.rs  main.rs  structure.rs  util.rs  web_server.rs
src/data_types/: mod.rs  opacity.rs  rgb.rs  svg_string.rs  transform.rs  vec2.rs
src/ecs/: arena.rs  entity.rs  mod.rs  world.rs
tests/: base_class.py  test_animated_collection.py  test_animation.py  test_canvas.py  test_connector.py  test_element.py  test_lazy_object.py  test_segment.py  test_updater.py
tests/animation/: __init__.py  test_animation.py  test_animations.py  test_constructors.py  test_interpolation.py
tests/core/: test_data_types.py  test_drawable.py  test_rgb.py  test_svg_string.py  test_transform.py  test_vec2.py
tests/primatives/: __init__.py  test_rgb.py  test_transform.py  test_vec2.py
visuscript/: __init__.py  _interpolable.py  _lazy_object.py  _property_locker.py  animated_collection.py  animation.py  canvas.py  code.py  config.py  connector.py  constants.py  drawable.py  drawings.py  element.py  lazy_object.py  math_utility.py  organizer.py  output.py  primatives.py  property_locker.py  scene.py  segment.py  segments.py  slide_show.py  test.py  text.py  updater.py  utility.py  visuscript_core.pyi
visuscript/_internal/: _constructors.py  _interpolable.py  _invalidator.py
visuscript/animation/: __init__.py  animation.py  animation_store.py  animations.py  constructors.py  easing.py  property_animation.py  utility_animations.py
visuscript/cli/: utility.py  visuscript_animate.py  visuscript_cli.py  visuscript_slideshow.py
visuscript/cli/scripts/: visuscript-slideshow
visuscript/drawable/: __init__.py  canvas.py  code.py  connector.py  drawable.py  element.py  image.py  protocols.py  scene.py  text.py
visuscript/drawable/elements/: __init__.py  drawing.py  shapes.py  utility.py
visuscript/drawable/mixins/: __init__.py  color.py  mixins.py
visuscript/primatives/: __init__.py  primatives.py  protocols.py
visuscript/primatives/mixins/: __init__.py  color.py  mixins.py
visuscript/slideshow/: __init__.py  cli.py  slideshow.py
