[project]
name = "visuscript"
version = "0.1.0a1"
authors = [
  { name="Joshua Zingale", email="joshua.thomas.zingale@gmail.com" },
]
description = "A Vector-Graphics-Based Animation Library"
requires-python = ">=3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
license = "MIT"
license-files = ["LICENCE"]
dependencies = [
    "numpy",
    "Pillow",
    "svg.py",
    "pygments",
    "coverage>=7.9.1",
    "pytest>=8.4.1",
]


[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.1",
]

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/joshua-zingale/visuscript"

[project.scripts]
visuscript = "visuscript.cli.visuscript_cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
visuscript = [
    "drawable/fonts/Arimo/*",
    "drawable/fonts/LeagueMono-2.300/*",
    "cli/scripts/visuscript-animate",
    "cli/scripts/visuscript-slideshow"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["visuscript"]

[tool.pyright]
include = [
    "visuscript/**.py",
    # "examples/**.py",
]
basic = [
    "examples/**.py"
]
strict = [
    "visuscript/**.py",
]
reportUnusedExpression = "none" # because visuscript overloads "<<" to be a push opperation, which is often "unused"
